# built-in-hybrid-server

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/ai/: language_model.rs  mod.rs  summarizer.rs
src/ai/language_model/: error.rs  mod.rs  types.rs
src/ai/language_model/providers/: gemini_provider.rs  mod.rs
src/ai/tokenizer/: mod.rs
src/middleware/: allowed_origins.rs  mod.rs
src/routes/: error.rs  language_model.rs  mod.rs  summarizer.rs
static/: fallback.mjs  index.html  main.mjs  style.css
tests/: prompts.rs
