[package]
name = "built-in-hybrid-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
gcp_auth = "0.12.3"
gemini-rs = { git = "https://github.com/andreban/gemini-rs/", rev = "de9b14b" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
    "fs",
    "cors",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
